k8s/resources/organization-v2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: organization-v2
spec:
  selector:
    matchLabels:
      app: organization
      version: v2
  template:
    metadata:
      labels:
        app: organization
        version: v2
    spec:
      containers:
        - name: organization
          image: containersoga/organization
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
