k8s/resources/department.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: department
spec:
  selector:
    matchLabels:
      app: department
  template:
    metadata:
      labels:
        app: department
    spec:
      containers:
        - name: department
          image: containersoga/department
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: department
  labels:
    app: department
spec:
  selector:
    app: department
  ports:
  - port: 8083
    targetPort: 8080
    protocol: TCP
    name: http
#  type: LoadBalancer
